test/integration/bad/new/print-bad6.stan
 transformed data { print ( "hello world" while
